# KosCleaner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audit.rs  executor.rs  lib.rs  main.rs  safety.rs  scanner.rs
src-tauri/src/cleaners/: browser.rs  chromium.rs  mod.rs  packages.rs  system.rs  trash.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: format.ts  i18n.ts  theme.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
