[package]
name = "koscleaner"
version = "0.1.0"
description = "Safe, transparent, open-source system cleaner"
authors = ["Martin Trajkovski"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "koscleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
